infra/kubernetes/backend/weasel-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: weasel-backend
  name: weasel-backend
  namespace: weasel-backend
spec:
  # replicas: 3
  selector:
    matchLabels:
      app: weasel-backend
  template:
    metadata:
      labels:
        app: weasel-backend
    spec:
      # serviceAccountName: weasel-eks-pod-sa
      containers:
      - image: harbor.kkamji.net/weasel-backend/backend-image:12.0
        name: weasel-backend
        resources:
          requests:
            cpu: "100m"
            memory: "250Mi"
          limits:
            cpu: "200m"
            memory: "500Mi"
      imagePullSecrets:
      - name: harbor-regcred
      # volumes:
      # - name: weasel-secrets
      #   csi:
      #     driver: secrets-store.csi.k8s.io
      #     readOnly: true
      #     volumeAttributes:
      #       secretProviderClass: weasel-secrets
